spacing fix for technologies used

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8618,7 +8618,7 @@ input, select, textarea {
 
 		.techs {
 			background-color: white;
-			height: 30px;
+			height: 1.5rem;
 			border-radius: 10px;
 			padding-left: 1%;
 			word-spacing: .5rem;
